working at signup

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -314,7 +314,7 @@ body {
 	background: #3498DB;
 	transition: all 0.3s ease-in-out 0s;
 }
-
+/* orange not emerlad */
 #generic_price_table_home .emerald {
 	background: #fcaf3e;
 	transition: all 0.3s ease-in-out 0s;
