fix bug with logout

--- a/src/main/webapp/resources/homepage/scss/_footer.scss
+++ b/src/main/webapp/resources/homepage/scss/_footer.scss
@@ -2,7 +2,7 @@ footer.footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
   .social-link {
-    display: block;
+    display: inline-block;
     height: 4rem;
     width: 4rem;
     line-height: 4.3rem;
