--- a/src/main/webapp/resources/tutorDashboard/js/gritter/css/jquery.gritter.css
+++ b/src/main/webapp/resources/tutorDashboard/js/gritter/css/jquery.gritter.css
@@ -1,8 +1,8 @@
 /* the norm */
 #gritter-notice-wrapper {
 	position:fixed;
-	top:20px;
-	right:20px;
+	bottom:20px;
+	left:20px;
 	width:301px;
 	z-index:9999;
 }
